-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P3
-
Affects Version/s: 26
-
Component/s: hotspot
-
b08
-
aarch64
-
os_x
The following test failed in the JDK26 CI:
compiler/onSpinWait/TestOnSpinWaitAArch64.java
Here's a snippet from the log file:
#section:driver
----------messages:(8/310)----------
command: driver compiler.onSpinWait.TestOnSpinWaitAArch64 c1 sb 1
reason: User specified action: run driver compiler.onSpinWait.TestOnSpinWaitAArch64 c1 sb 1
started: Mon Jul 14 19:12:42 GMT 2025
Mode: agentvm
Agent id: 8
Process id: 15597
finished: Mon Jul 14 19:12:45 GMT 2025
elapsed time (seconds): 2.823
----------configuration:(14/2012)----------
<snip>
----------System.err:(29/1945)----------
stdout: [#
# A fatal error has been detected by the Java Runtime Environment:
#
# Internal Error (/System/Volumes/Data/mesos/work_dir/slaves/d2398cde-9325-49c3-b030-8961a4f0a253-S577093/frameworks/1735e8a2-a1db-478c-8104-60c8b0af87dd-0196/executors/da0b7b0f-e736-4641-9a75-1b69e20fe2a9/runs/c2e8223d-c732-4099-8da7-827c79a47aec/workspace/open/src/hotspot/os_cpu/bsd_aarch64/os_bsd_aarch64.cpp:539), pid=16220, tid=4867
# assert(VM_Version::spin_wait_desc().inst() >= SpinWait::NONE && VM_Version::spin_wait_desc().inst() <= SpinWait::YIELD) failed: must be
#
# JRE version: (26.0+7) (fastdebug build )
# Java VM: Java HotSpot(TM) 64-Bit Server VM (fastdebug 26-ea+7-641, mixed mode, emulated-client, sharing, tiered, compressed oops, compressed class ptrs, g1 gc, bsd-aarch64)
# Core dump will be written. Default location: core.16220
#
# An error report file with more information is saved as:
# /System/Volumes/Data/mesos/work_dir/slaves/d2398cde-9325-49c3-b030-8961a4f0a253-S577423/frameworks/1735e8a2-a1db-478c-8104-60c8b0af87dd-0196/executors/7824c4a2-9175-4074-a7ee-c70a0e27a3c3/runs/aa8baa9e-3690-49f7-843f-c5bc106129a3/testoutput/test-support/jtreg_open_test_hotspot_jtreg_tier2_compiler/scratch/1/hs_err_pid16220.log
#
#
];
stderr: []
exitValue = 134
java.lang.RuntimeException: Expected to get exit value of [0], exit value is: [134]
at jdk.test.lib.process.OutputAnalyzer.shouldHaveExitValue(OutputAnalyzer.java:522)
at compiler.onSpinWait.TestOnSpinWaitAArch64.main(TestOnSpinWaitAArch64.java:88)
at java.base/jdk.internal.reflect.DirectMethodHandleAccessor.invoke(DirectMethodHandleAccessor.java:104)
at java.base/java.lang.reflect.Method.invoke(Method.java:565)
at com.sun.javatest.regtest.agent.MainActionHelper$AgentVMRunnable.run(MainActionHelper.java:335)
at java.base/java.lang.Thread.run(Thread.java:1474)
JavaTest Message: Test threw exception: java.lang.RuntimeException
JavaTest Message: shutting down test
result: Failed. Execution failed: `main' threw exception: java.lang.RuntimeException: Expected to get exit value of [0], exit value is: [134]
Here's the crashing thread's stack trace:
--------------- T H R E A D ---------------
Current thread (0x0000000125809410): JavaThread "Unknown thread" [_thread_in_vm, id=4867, stack(0x000000016f5d0000,0x000000016f7d3000) (2060K)]
Stack: [0x000000016f5d0000,0x000000016f7d3000], sp=0x000000016f7d1b30, free space=2054k
Native frames: (J=compiled Java code, j=interpreted, Vv=VM code, C=native code)
V [libjvm.dylib+0x121db64] VMError::report(outputStream*, bool)+0x1b00 (os_bsd_aarch64.cpp:539)
V [libjvm.dylib+0x1221404] VMError::report_and_die(int, char const*, char const*, char*, Thread*, unsigned char*, void const*, void const*, char const*, int, unsigned long)+0x55c
V [libjvm.dylib+0x5a8a68] print_error_for_unit_test(char const*, char const*, char*)+0x0
V [libjvm.dylib+0xec5c0c] _Copy_conjoint_jshorts_atomic+0x0
V [libjvm.dylib+0x26e9e4] ArchiveWorkers::run_task_multi(ArchiveWorkerTask*)+0x12c
V [libjvm.dylib+0x26e7f4] ArchiveWorkers::run_task(ArchiveWorkerTask*)+0x50
V [libjvm.dylib+0x692c58] FileMapInfo::relocate_pointers_in_core_regions(long)+0x404
V [libjvm.dylib+0x6923cc] FileMapInfo::map_regions(int*, int, char*, ReservedSpace)+0x244
V [libjvm.dylib+0xdf6b34] MetaspaceShared::map_archive(FileMapInfo*, char*, ReservedSpace)+0x8c
V [libjvm.dylib+0xdf5ec8] MetaspaceShared::map_archives(FileMapInfo*, FileMapInfo*, bool)+0x36c
V [libjvm.dylib+0xdf56a0] MetaspaceShared::initialize_runtime_shared_and_meta_spaces()+0x114
V [libjvm.dylib+0xdea8a0] Metaspace::global_initialize()+0x88
V [libjvm.dylib+0x11ab61c] universe_init()+0x1a8
V [libjvm.dylib+0x8744d8] init_globals()+0x64
V [libjvm.dylib+0x1175840] Threads::create_vm(JavaVMInitArgs*, bool*)+0x2f8
V [libjvm.dylib+0x9f1ab8] JNI_CreateJavaVM+0x70
C [libjli.dylib+0xa3d0] JavaMain+0x100
C [libjli.dylib+0xd52c] ThreadJavaMain+0xc
C [libsystem_pthread.dylib+0x72e4] _pthread_start+0x88
Lock stack of current Java thread (top to bottom):
compiler/onSpinWait/TestOnSpinWaitAArch64.java
Here's a snippet from the log file:
#section:driver
----------messages:(8/310)----------
command: driver compiler.onSpinWait.TestOnSpinWaitAArch64 c1 sb 1
reason: User specified action: run driver compiler.onSpinWait.TestOnSpinWaitAArch64 c1 sb 1
started: Mon Jul 14 19:12:42 GMT 2025
Mode: agentvm
Agent id: 8
Process id: 15597
finished: Mon Jul 14 19:12:45 GMT 2025
elapsed time (seconds): 2.823
----------configuration:(14/2012)----------
<snip>
----------System.err:(29/1945)----------
stdout: [#
# A fatal error has been detected by the Java Runtime Environment:
#
# Internal Error (/System/Volumes/Data/mesos/work_dir/slaves/d2398cde-9325-49c3-b030-8961a4f0a253-S577093/frameworks/1735e8a2-a1db-478c-8104-60c8b0af87dd-0196/executors/da0b7b0f-e736-4641-9a75-1b69e20fe2a9/runs/c2e8223d-c732-4099-8da7-827c79a47aec/workspace/open/src/hotspot/os_cpu/bsd_aarch64/os_bsd_aarch64.cpp:539), pid=16220, tid=4867
# assert(VM_Version::spin_wait_desc().inst() >= SpinWait::NONE && VM_Version::spin_wait_desc().inst() <= SpinWait::YIELD) failed: must be
#
# JRE version: (26.0+7) (fastdebug build )
# Java VM: Java HotSpot(TM) 64-Bit Server VM (fastdebug 26-ea+7-641, mixed mode, emulated-client, sharing, tiered, compressed oops, compressed class ptrs, g1 gc, bsd-aarch64)
# Core dump will be written. Default location: core.16220
#
# An error report file with more information is saved as:
# /System/Volumes/Data/mesos/work_dir/slaves/d2398cde-9325-49c3-b030-8961a4f0a253-S577423/frameworks/1735e8a2-a1db-478c-8104-60c8b0af87dd-0196/executors/7824c4a2-9175-4074-a7ee-c70a0e27a3c3/runs/aa8baa9e-3690-49f7-843f-c5bc106129a3/testoutput/test-support/jtreg_open_test_hotspot_jtreg_tier2_compiler/scratch/1/hs_err_pid16220.log
#
#
];
stderr: []
exitValue = 134
java.lang.RuntimeException: Expected to get exit value of [0], exit value is: [134]
at jdk.test.lib.process.OutputAnalyzer.shouldHaveExitValue(OutputAnalyzer.java:522)
at compiler.onSpinWait.TestOnSpinWaitAArch64.main(TestOnSpinWaitAArch64.java:88)
at java.base/jdk.internal.reflect.DirectMethodHandleAccessor.invoke(DirectMethodHandleAccessor.java:104)
at java.base/java.lang.reflect.Method.invoke(Method.java:565)
at com.sun.javatest.regtest.agent.MainActionHelper$AgentVMRunnable.run(MainActionHelper.java:335)
at java.base/java.lang.Thread.run(Thread.java:1474)
JavaTest Message: Test threw exception: java.lang.RuntimeException
JavaTest Message: shutting down test
result: Failed. Execution failed: `main' threw exception: java.lang.RuntimeException: Expected to get exit value of [0], exit value is: [134]
Here's the crashing thread's stack trace:
--------------- T H R E A D ---------------
Current thread (0x0000000125809410): JavaThread "Unknown thread" [_thread_in_vm, id=4867, stack(0x000000016f5d0000,0x000000016f7d3000) (2060K)]
Stack: [0x000000016f5d0000,0x000000016f7d3000], sp=0x000000016f7d1b30, free space=2054k
Native frames: (J=compiled Java code, j=interpreted, Vv=VM code, C=native code)
V [libjvm.dylib+0x121db64] VMError::report(outputStream*, bool)+0x1b00 (os_bsd_aarch64.cpp:539)
V [libjvm.dylib+0x1221404] VMError::report_and_die(int, char const*, char const*, char*, Thread*, unsigned char*, void const*, void const*, char const*, int, unsigned long)+0x55c
V [libjvm.dylib+0x5a8a68] print_error_for_unit_test(char const*, char const*, char*)+0x0
V [libjvm.dylib+0xec5c0c] _Copy_conjoint_jshorts_atomic+0x0
V [libjvm.dylib+0x26e9e4] ArchiveWorkers::run_task_multi(ArchiveWorkerTask*)+0x12c
V [libjvm.dylib+0x26e7f4] ArchiveWorkers::run_task(ArchiveWorkerTask*)+0x50
V [libjvm.dylib+0x692c58] FileMapInfo::relocate_pointers_in_core_regions(long)+0x404
V [libjvm.dylib+0x6923cc] FileMapInfo::map_regions(int*, int, char*, ReservedSpace)+0x244
V [libjvm.dylib+0xdf6b34] MetaspaceShared::map_archive(FileMapInfo*, char*, ReservedSpace)+0x8c
V [libjvm.dylib+0xdf5ec8] MetaspaceShared::map_archives(FileMapInfo*, FileMapInfo*, bool)+0x36c
V [libjvm.dylib+0xdf56a0] MetaspaceShared::initialize_runtime_shared_and_meta_spaces()+0x114
V [libjvm.dylib+0xdea8a0] Metaspace::global_initialize()+0x88
V [libjvm.dylib+0x11ab61c] universe_init()+0x1a8
V [libjvm.dylib+0x8744d8] init_globals()+0x64
V [libjvm.dylib+0x1175840] Threads::create_vm(JavaVMInitArgs*, bool*)+0x2f8
V [libjvm.dylib+0x9f1ab8] JNI_CreateJavaVM+0x70
C [libjli.dylib+0xa3d0] JavaMain+0x100
C [libjli.dylib+0xd52c] ThreadJavaMain+0xc
C [libsystem_pthread.dylib+0x72e4] _pthread_start+0x88
Lock stack of current Java thread (top to bottom):
- caused by
-
JDK-8359435 AArch64: add support for SB instruction to MacroAssembler::spin_wait
-
- Resolved
-
- relates to
-
JDK-8321371 SpinPause() not implemented for bsd_aarch64/macOS
-
- Resolved
-
- links to
-
Commit(master)
openjdk/jdk/743c8212
-
Review(master)
openjdk/jdk/26387