8362193: compiler/onSpinWait/TestOnSpinWaitAArch64.java asserts on spin-wait insns range checks