src/hotspot/cpu/aarch64/globals_aarch64.hpp
@@ -26,6 +26,7 @@
 #ifndef CPU_AARCH64_GLOBALS_AARCH64_HPP
 #define CPU_AARCH64_GLOBALS_AARCH64_HPP
 
+#include "spin_wait_aarch64.hpp"
 #include "utilities/globalDefinitions.hpp"
 #include "utilities/macros.hpp"
 
@@ -114,10 +115,11 @@ define_pd_global(intx, InlineSmallCode,          1000);
           "Use prfm hint with specified distance in compiled code."     \
           "Value -1 means off.")                                        \
           range(-1, 4096)                                               \
-  product(ccstr, OnSpinWaitInst, "yield", DIAGNOSTIC,                   \
+  product(ccstr, OnSpinWaitInst, DEFAULT_SPIN_WAIT_INST, DIAGNOSTIC,    \
           "The instruction to use to implement "                        \
           "java.lang.Thread.onSpinWait()."                              \
-          "Options: none, nop, isb, yield, sb.")                        \
+          "Options: "                                                   \
+          SPIN_WAIT_INST_OPTIONS)                                       \
   product(uint, OnSpinWaitInstCount, 1, DIAGNOSTIC,                     \
           "The number of OnSpinWaitInst instructions to generate."      \
           "It cannot be used with OnSpinWaitInst=none.")                \
