src/hotspot/cpu/aarch64/macroAssembler_aarch64.cpp
@@ -54,6 +54,7 @@
 #include "runtime/jniHandles.inline.hpp"
 #include "runtime/sharedRuntime.hpp"
 #include "runtime/stubRoutines.hpp"
+#include "spin_wait_aarch64.inline.hpp"
 #include "utilities/globalDefinitions.hpp"
 #include "utilities/powerOfTwo.hpp"
 #ifdef COMPILER1
@@ -6804,24 +6805,7 @@ void MacroAssembler::verify_cross_modify_fence_not_required() {
 
 void MacroAssembler::spin_wait() {
   block_comment("spin_wait {");
-  for (int i = 0; i < VM_Version::spin_wait_desc().inst_count(); ++i) {
-    switch (VM_Version::spin_wait_desc().inst()) {
-      case SpinWait::NOP:
-        nop();
-        break;
-      case SpinWait::ISB:
-        isb();
-        break;
-      case SpinWait::YIELD:
-        yield();
-        break;
-      case SpinWait::SB:
-        sb();
-        break;
-      default:
-        ShouldNotReachHere();
-    }
-  }
+  generate_spin_wait(this, VM_Version::spin_wait_desc());
   block_comment("}");
 }
 
